# 2A202600844-PhanAnhThang-Day09

./: test_client.py
2A202600844-PhanAnhThang-Day08/: ARCHITECTURE.md  app.py  pyproject.toml  server.py
2A202600844-PhanAnhThang-Day08/data/landing/legal/: 105_2021_ND-CP_496664.doc  12_2017_QH14_354053.doc  73_2021_QH14_445185.doc
2A202600844-PhanAnhThang-Day08/data/landing/news/: 04-dien-vien-hai-tran-huu-tin-lanh-7-nam-6-thang-tu.json
2A202600844-PhanAnhThang-Day08/data/standardized/legal/: 28_2026_ND-CP_690473.md
2A202600844-PhanAnhThang-Day08/data/standardized/news/: 01-khoi-to-bat-tam-giam-ca-si-long-nhat-son-ngoc-minh-vi-to-chu.md  03-ca-si-chi-dan-bi-truy-to-he-mo-loi-ru-re-4-ban-nhau-dung-ma-.md  04-dien-vien-hai-tran-huu-tin-lanh-7-nam-6-thang-tu.md  05-tin-tuc-vu-an-ca-si-chau-viet-cuong-cap-nhat-lien-tuc-vietna.md
2A202600844-PhanAnhThang-Day08/group_project/evaluation/: eval_pipeline.py
2A202600844-PhanAnhThang-Day08/src/: __init__.py  agents.py  rag_utils.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py
2A202600844-PhanAnhThang-Day08/web/: styles.css
Day08/: .env.example  .gitignore
Day08/group_project/: README.md
Day08/group_project/evaluation/: golden_dataset.json  results.md
Day08/src/: source_labels.py  task10_generation.py  task8_pageindex_vectorless.py  task9_retrieval_pipeline.py
Day08/web/: app.js  index.html
exercises/: exercise_2_tools.py  exercise_4_multiagent.py
stages/stage_3_single_agent/: main.py
stages/stage_4_milti_agent/: main.py
tax_agent/: graph.py
(+6 files in other folders)
